<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Perahera image -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="470dp">

            <ImageView
                android:id="@+id/bannerImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/perahera" />

            <ImageView
                android:id="@+id/backButtonEsala2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="16dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MAJESTIC JOURNEY\nBEGINS"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_alignParentBottom="true"
                android:layout_margin="16dp" />
        </RelativeLayout>

        <!-- perahera displays -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card2"
            android:padding="20dp"
            android:clipToOutline="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Book Your Seats"
                android:textColor="#D32F2F"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- perahera 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/card"
                android:elevation="4dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/perahera" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Second_randoli_procession"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5th of August\nat 7.00 pm"
                        android:textSize="13sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>

            <!-- perahera 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/card"
                android:elevation="4dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/perahera" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3rd_randoli_procession"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_perahera3"
                        android:textSize="13sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>

            <!-- perahera 4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/card"
                android:elevation="4dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/perahera" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4th_randoli_procession"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_perahera4"
                        android:textSize="13sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>

            <!-- perahera 5 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/card"
                android:elevation="4dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/perahera" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grand_randoli_perahera"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_perahera5"
                        android:textSize="13sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Book Button -->
            <Button
                android:id="@+id/bookNowButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Button_content"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:backgroundTint="#1976D2"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
